--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
     "@types/sqlite3": "^3.1.11",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-
     "start": "^5.1.0",
-
-    "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
-    "typescript": "^5.3.3"
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.13.0",
     "nodemon": "^3.1.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
   }
 }
