--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://innocent:K2AF6nl22ZO1SoZh@cluster0.oqd43ni.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI=mongodb+srv://innocent:K2AF6nl22ZO1SoZh@cluster0.oqd43ni.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 API_KEY=your_api_key
+MONGODB_URI=mongodb://localhost:27017
