--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
   "license": "ISC",
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "start": "^5.1.0",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.13.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   }
 }
